scrub away the gunk GIT_SILENT

--- a/plugins/printing/whatsnext/CMakeLists.txt
+++ b/plugins/printing/whatsnext/CMakeLists.txt
@@ -1,23 +1,30 @@
 
-include_directories( ${CMAKE_SOURCE_DIR}/korganizer/interfaces ${CMAKE_SOURCE_DIR}/korganizer/printing  )
-
+include_directories(
+  ${CMAKE_SOURCE_DIR}/korganizer/interfaces
+  ${CMAKE_SOURCE_DIR}/korganizer/printing
+)
 
 ########### next target ###############
 
-set(korg_whatsnextprint_PART_SRCS whatsnextprint.cpp )
+set(korg_whatsnextprint_PART_SRCS whatsnextprint.cpp)
 
-
-kde4_add_ui_files(korg_whatsnextprint_PART_SRCS calprintwhatsnextconfig_base.ui )
+kde4_add_ui_files(korg_whatsnextprint_PART_SRCS calprintwhatsnextconfig_base.ui)
 
 kde4_add_plugin(korg_whatsnextprint ${korg_whatsnextprint_PART_SRCS})
 
+target_link_libraries(korg_whatsnextprint
+  korganizerprivate
+  ${KDE4_KDEUI_LIBS}
+)
 
-
-target_link_libraries(korg_whatsnextprint  ${KDE4_KDEUI_LIBS}  korganizerprivate )
-
-install(TARGETS korg_whatsnextprint  DESTINATION ${PLUGIN_INSTALL_DIR})
-
+install(TARGETS
+  korg_whatsnextprint
+  DESTINATION ${PLUGIN_INSTALL_DIR}
+)
 
 ########### install files ###############
 
-install( FILES whatsnextprint.desktop  DESTINATION ${SERVICES_INSTALL_DIR}/korganizer)
+install(FILES
+  whatsnextprint.desktop
+  DESTINATION ${SERVICES_INSTALL_DIR}/korganizer
+)
