--- a/interfaces/korganizer/CMakeLists.txt
+++ b/interfaces/korganizer/CMakeLists.txt
@@ -1,6 +1,4 @@
 
-
-
 ########### next target ###############
 
 set(korganizer_interfaces_LIB_SRCS
@@ -8,21 +6,28 @@ set(korganizer_interfaces_LIB_SRCS
   mainwindow.cpp
 )
 
-
 kde4_add_library(korganizer_interfaces ${LIBRARY_TYPE} ${korganizer_interfaces_LIB_SRCS})
 
 target_link_libraries(korganizer_interfaces
-                      ${KDE4_KIO_LIBS}
-                      ${KDEPIMLIBS_AKONADI_LIBS}
-                      akonadi_next
-                      calendarsupport
+  akonadi_next
+  calendarsupport
+  ${KDEPIMLIBS_AKONADI_LIBS}
+  ${KDE4_KIO_LIBS}
 )
 
-set_target_properties(korganizer_interfaces PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
-install(TARGETS korganizer_interfaces ${INSTALL_TARGETS_DEFAULT_ARGS})
+set_target_properties(korganizer_interfaces PROPERTIES
+  VERSION ${GENERIC_LIB_VERSION}
+  SOVERSION ${GENERIC_LIB_SOVERSION}
+)
 
+install(TARGETS
+  korganizer_interfaces ${INSTALL_TARGETS_DEFAULT_ARGS}
+)
 
 ########### install files ###############
 
-install( FILES korganizerpart.desktop korgprintplugin.desktop  DESTINATION ${SERVICETYPES_INSTALL_DIR})
+install(FILES
+  korganizerpart.desktop korgprintplugin.desktop
+  DESTINATION ${SERVICETYPES_INSTALL_DIR}
+)
 
