--- a/kcmconfigs/CMakeLists.txt
+++ b/kcmconfigs/CMakeLists.txt
@@ -1,10 +1,12 @@
-install( FILES korganizer_configmain.desktop
-               korganizer_configtime.desktop
-               korganizer_configviews.desktop
-               korganizer_configcolorsandfonts.desktop
-               korganizer_configplugins.desktop
-               korganizer_configgroupscheduling.desktop
-               korganizer_configfreebusy.desktop
-               korganizer_configdesignerfields.desktop
-               DESTINATION ${SERVICES_INSTALL_DIR})
+install(FILES
+  korganizer_configcolorsandfonts.desktop
+  korganizer_configdesignerfields.desktop
+  korganizer_configfreebusy.desktop
+  korganizer_configgroupscheduling.desktop
+  korganizer_configmain.desktop
+  korganizer_configplugins.desktop
+  korganizer_configtime.desktop
+  korganizer_configviews.desktop
+  DESTINATION ${SERVICES_INSTALL_DIR}
+)
 
