--- a/plugins/picoftheday/CMakeLists.txt
+++ b/plugins/picoftheday/CMakeLists.txt
@@ -1,35 +1,34 @@
 
 include_directories(
-                     ${CMAKE_SOURCE_DIR}/korganizer/interfaces
-                     ${CMAKE_SOURCE_DIR}/korganizer
-                   )
-
+  ${CMAKE_SOURCE_DIR}/korganizer/interfaces
+  ${CMAKE_SOURCE_DIR}/korganizer
+)
 
 ########### next target ###############
 
-set( korg_picoftheday_PART_SRCS
-     configdialog.cpp
-     picoftheday.cpp
-   )
+set(korg_picoftheday_PART_SRCS
+  configdialog.cpp
+  picoftheday.cpp
+)
 
+kde4_add_plugin(korg_picoftheday ${korg_picoftheday_PART_SRCS})
 
-kde4_add_plugin( korg_picoftheday ${korg_picoftheday_PART_SRCS} )
+target_link_libraries(korg_picoftheday
+  eventviews
+  korganizerprivate
+  ${KDE4_KDEUI_LIBS}
+  ${KDE4_KIO_LIBS}
+)
 
-
-
-target_link_libraries( korg_picoftheday
-                       ${KDE4_KIO_LIBS}
-                       ${KDE4_KDEUI_LIBS}
-                       korganizerprivate
-                       eventviews )
-
-install( TARGETS korg_picoftheday
-         DESTINATION ${PLUGIN_INSTALL_DIR} )
-
+install(TARGETS
+  korg_picoftheday
+  DESTINATION ${PLUGIN_INSTALL_DIR}
+)
 
 ########### install files ###############
 
-install( FILES picoftheday.desktop
-         DESTINATION ${SERVICES_INSTALL_DIR}/korganizer )
-
+install(FILES
+  picoftheday.desktop
+  DESTINATION ${SERVICES_INSTALL_DIR}/korganizer
+)
 
