--- a/plugins/thisdayinhistory/CMakeLists.txt
+++ b/plugins/thisdayinhistory/CMakeLists.txt
@@ -1,32 +1,32 @@
 
 include_directories(
-                     ${CMAKE_SOURCE_DIR}/korganizer/interfaces
-                     ${CMAKE_SOURCE_DIR}/korganizer
-                   )
-
+  ${CMAKE_SOURCE_DIR}/korganizer/interfaces
+  ${CMAKE_SOURCE_DIR}/korganizer
+)
 
 ########### next target ###############
 
-set( korg_thisdayinhistory_PART_SRCS
-     thisdayinhistory.cpp
-   )
+set(korg_thisdayinhistory_PART_SRCS
+  thisdayinhistory.cpp
+)
 
+kde4_add_plugin(korg_thisdayinhistory ${korg_thisdayinhistory_PART_SRCS})
 
-kde4_add_plugin( korg_thisdayinhistory ${korg_thisdayinhistory_PART_SRCS} )
+target_link_libraries(korg_thisdayinhistory
+  eventviews
+  korganizerprivate
+  ${KDE4_KDECORE_LIBS}
+  ${KDE4_KDEUI_LIBS}
+)
 
-
-
-target_link_libraries( korg_thisdayinhistory
-                       ${KDE4_KDECORE_LIBS}
-                       ${KDE4_KDEUI_LIBS}
-                       korganizerprivate
-                       eventviews )
-
-install( TARGETS korg_thisdayinhistory
-         DESTINATION ${PLUGIN_INSTALL_DIR} )
-
+install(TARGETS
+  korg_thisdayinhistory
+  DESTINATION ${PLUGIN_INSTALL_DIR}
+)
 
 ########### install files ###############
 
-install( FILES thisdayinhistory.desktop
-         DESTINATION ${SERVICES_INSTALL_DIR}/korganizer )
+install(FILES
+  thisdayinhistory.desktop
+  DESTINATION ${SERVICES_INSTALL_DIR}/korganizer
+)
