--- a/plugins/printing/CMakeLists.txt
+++ b/plugins/printing/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_subdirectory(journal)
 add_subdirectory(year)
+#TODO: make the whatsnext and itemlist print plugins actually do something.
+#add_subdirectory(whatsnext)
+#add_subdirectory(itemlist)
