--- a/plugins/printing/itemlist/CMakeLists.txt
+++ b/plugins/printing/itemlist/CMakeLists.txt
@@ -6,25 +6,25 @@ include_directories(
 
 ########### next target ###############
 
-set(korg_listprint_PART_SRCS listprint.cpp)
+set(korg_itemlistprint_PART_SRCS itemlistprint.cpp)
 
-kde4_add_ui_files(korg_listprint_PART_SRCS calprintlistconfig_base.ui)
+kde4_add_ui_files(korg_itemlistprint_PART_SRCS calprintitemlistconfig_base.ui)
 
-kde4_add_plugin(korg_listprint ${korg_listprint_PART_SRCS})
+kde4_add_plugin(korg_itemlistprint ${korg_itemlistprint_PART_SRCS})
 
-target_link_libraries(korg_listprint
+target_link_libraries(korg_itemlistprint
   korganizerprivate
   ${KDE4_KDEUI_LIBS}
 )
 
 install(TARGETS
-  korg_listprint
+  korg_itemlistprint
   DESTINATION ${PLUGIN_INSTALL_DIR}
 )
 
 ########### install files ###############
 
 install(FILES
-  listprint.desktop
+  itemlistprint.desktop
   DESTINATION ${SERVICES_INSTALL_DIR}/korganizer
 )
