SVN_SILENT made messages (.desktop file)

--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -31,7 +31,7 @@ Name[nn]=Grensesnitt til utskriftsprogramtillegg til KOrganizer
 Name[pa]=ਕੇ-ਪਰਬੰਧਕ ਪਰਿੰਟ ਪਲੱਗਇਨ ਸੰਰਚਨਾ
 Name[pl]=Interfejs wtyczki drukowania KOrganizera
 Name[pt]=Interface do 'Plugin' de Impressão do KOrganizer
-Name[pt_BR]=Interface do plug-in de impressão do KOrganizer
+Name[pt_BR]=Interface do plugin de impressão do KOrganizer
 Name[ru]=Печать календаря
 Name[sl]=KOrganizerjev vmesnik za tiskalniške vstavke
 Name[sr]=Сучеље К‑организаторовог прикључка за штампање
