--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -61,7 +61,7 @@ Name[oc]=Ajustons
 Name[pa]=ਪਲੱਗਇਨਾਂ
 Name[pl]=Wtyczki
 Name[pt]='Plugins'
-Name[pt_BR]=Plug-ins
+Name[pt_BR]=Plugins
 Name[ro]=Module
 Name[ru]=Модули
 Name[sk]=Moduly
@@ -126,7 +126,7 @@ Comment[nn]=Oppsett av KOrganizer-programtillegg
 Comment[pa]=ਕੇ-ਪਰਬੰਧਕ ਪਲੱਗਇਨ ਸੰਰਚਨਾ
 Comment[pl]=Konfiguracja wtyczek KOrganizera
 Comment[pt]=Configuração de 'Plugins' do KOrganizer
-Comment[pt_BR]=Configuração dos plug-ins do KOrganizer
+Comment[pt_BR]=Configuração dos plugins do KOrganizer
 Comment[ro]=Configurare module KOrganizer
 Comment[ru]=Настройка модулей
 Comment[sk]=Nastavenie modulu KOrganizer
@@ -161,7 +161,7 @@ X-KDE-Keywords[nb]=korganizer,programtillegg,modul
 X-KDE-Keywords[nl]=korganizer,plug-in,module
 X-KDE-Keywords[pl]=korganizer,wtyczka,moduł
 X-KDE-Keywords[pt]=korganizer,'plugin',módulo
-X-KDE-Keywords[pt_BR]=korganizer,plug-in,módulo
+X-KDE-Keywords[pt_BR]=korganizer,plugin,módulo
 X-KDE-Keywords[sr]=korganizer,plugin,module,К‑организатор,прикључак,модул
 X-KDE-Keywords[sr@ijekavian]=korganizer,plugin,module,К‑организатор,прикључак,модул
 X-KDE-Keywords[sr@ijekavianlatin]=korganizer,plugin,module,K‑organizator,priključak,modul
