--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -43,7 +43,7 @@ Name[nl]=Joodse kalenderplug-in
 Name[nn]=Kalender-programtillegg for jødisk kalender
 Name[pl]=Wtyczka kalendarza żydowskiego
 Name[pt]='Plugin' do Calendário Judeu
-Name[pt_BR]=Plug-in de calendário judaico
+Name[pt_BR]=Plugin de calendário judaico
 Name[ro]=Modul calendar evreiesc
 Name[ru]=Еврейский календарь
 Name[sk]=Modul Židovského kalendára
