--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -34,7 +34,7 @@ Name[nn]=Kalender-programtillegg for dagens bilete frå Wikipedia
 Name[pa]=ਕੈਲੰਡਰ ਲਈ ਦਿਨ ਦੀ ਵਿਕਿਪੀਡਿਆ ਤਸਵੀਰ ਪਲੱਗਇਨ
 Name[pl]=Grafika na medal z Wikipedii
 Name[pt]='Plugin' de Imagem do Dia do Wikipédia para Calendários
-Name[pt_BR]=Plug-in de Imagem do Dia da Wikipédia para Calendários
+Name[pt_BR]=Plugin de Imagem do Dia da Wikipédia para Calendários
 Name[ru]=Изображение дня с Wikipedia для календаря
 Name[sl]=Vstavek za Wikipedijin »Slika dneva« za koledarje
 Name[sr]=Прикључак календара за Википедијину слику дана
@@ -78,7 +78,7 @@ Comment[nl]=Deze plug-in geeft de Wikipedia-afbeelding van de dag
 Comment[nn]=Dette programtillegget viser dagens bilete frå Wikipedia.
 Comment[pl]=Wtyczka dostarcza Obrazek Dnia Wikipedii
 Comment[pt]=Este 'plugin' oferece a Imagem do Dia do Wikipédia
-Comment[pt_BR]=Este plug-in oferece a Imagem do Dia da Wikipédia
+Comment[pt_BR]=Este plugin oferece a Imagem do Dia da Wikipédia
 Comment[ru]=Изображение дня с Wikipedia для календаря
 Comment[sl]=Ta vstavek ponuja sliko dneva z Wikipedije
 Comment[sr]=Прикључак за добављање Википедијине слике дана
