--- a/plugins/printing/itemlist/listprint.desktop
+++ b/plugins/printing/itemlist/listprint.desktop
@@ -95,7 +95,7 @@ Comment[nl]=Deze plug-in maakt het mogelijk om evenementen en taken in lijstvorm
 Comment[nn]=Dette programtillegget lèt deg skriva ut hendingar og hugselister på listeform.
 Comment[pl]=Ta wtyczka pozwala drukować zdarzenia i zadania w postaci listy.
 Comment[pt]=Este 'plugin' permite-lhe imprimir os eventos e os itens por-fazer no formato de uma lista.
-Comment[pt_BR]=Este plug-in permite-lhe imprimir eventos e tarefas em forma de lista.
+Comment[pt_BR]=Este plugin permite-lhe imprimir eventos e tarefas em forma de lista.
 Comment[ru]=Этот модуль позволяет печатать список событий и задач.
 Comment[sk]=Tento modul umožní vytlačiť udalosti a úlohy vo forme zoznamu.
 Comment[sl]=Ta vstavek vam omogoča natis dogodkov in čakajočih opravil v obliki seznama.
