--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -96,7 +96,7 @@ Comment[nl]=Deze plug-in maakt het mogelijk om journalen uit te printen (dagboek
 Comment[nn]=Dette programtillegget lèt deg skriva ut dagboktekstar.
 Comment[pl]=Ta wtyczka pozwala drukować wpisy dziennika.
 Comment[pt]=Este diário permite-lhe imprimir os itens de diário.
-Comment[pt_BR]=Este plug-in permite-lhe imprimir entradas de diário.
+Comment[pt_BR]=Este plugin permite-lhe imprimir entradas de diário.
 Comment[ru]=Этот модуль позволяет печатать дневник.
 Comment[sk]=Tento modul umožní vytlačiť položky žurnálu (denníkové položky).
 Comment[sl]=Ta vstavek vam omogoča natis vnosov v dnevnik.
