--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -96,7 +96,7 @@ Comment[nn]=Dette programtillegget lèt deg skriva ut ei liste over alle dei kom
 Comment[pa]=ਇਹ ਪਲੱਗਇਨ ਤੁਹਾਨੂੰ ਸਭ ਆ ਰਹੇ ਈਵੈਟਾਂ ਅਤੇ ਟੂ-ਡੂ ਦੀ ਲਿਸਟ ਪਰਿੰਟ ਕਰਨ ਲਈ ਸਹਾਇਕ ਹੈ।
 Comment[pl]=Ta wtyczka pozwala wydrukować wszystkie przyszłe zdarzenia i zadania.
 Comment[pt]=Este 'plugin' permite-lhe imprimir uma lista com todos os eventos e itens por-fazer próximos.
-Comment[pt_BR]=Este plug-in permite-lhe imprimir uma lista de todos os próximos eventos e tarefas.
+Comment[pt_BR]=Este plugin permite-lhe imprimir uma lista de todos os próximos eventos e tarefas.
 Comment[ru]=Этот модуль позволяет печатать список предстоящих событий и задач.
 Comment[sk]=Tento modul umožní vytlačiť zoznam všetkých nadchádzajúcich udalostí a úloh.
 Comment[sl]=Ta vstavek vam omogoča natis seznama vseh prihodnjih dogodkov in čakajočih opravil.
