--- a/plugins/printing/year/yearprint.desktop
+++ b/plugins/printing/year/yearprint.desktop
@@ -89,7 +89,7 @@ Comment[nn]=Dette programtillegget lèt deg skriva ut ein årleg kalender.
 Comment[pa]=ਇਹ ਪਲੱਗਇਨ ਤੁਹਾਨੂੰ ਸਾਲਨਾ ਕੈਲੰਡਰ ਪਰਿੰਟ ਕਰਨ ਲਈ ਸਹਾਇਕ ਹੈ।
 Comment[pl]=Ta wtyczka pozwala drukować roczny kalendarz.
 Comment[pt]=Este 'plugin' permite-lhe imprimir um calendário anual.
-Comment[pt_BR]=Esse plug-in permite-lhe imprimir um calendário anual.
+Comment[pt_BR]=Esse plugin permite-lhe imprimir um calendário anual.
 Comment[ru]=Этот модуль позволяет печатать календарь на год.
 Comment[sk]=Tento modul vám umožní vytlačiť kalendár na rok.
 Comment[sl]=Ta vstavek vam omogoča natis letnega koledarja.
