--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -42,7 +42,7 @@ Name[nn]=Kalender-programtillegg for datonummer
 Name[pa]=ਕੈਲੰਡਰਾਂ ਲਈ ਮਿਤੀ ਨੰਬਰ ਪਲੱਗਇਨ
 Name[pl]=Wtyczka numerów dni dla Kalendarzy
 Name[pt]='Plugin' de Números de Datas para Calendários
-Name[pt_BR]=Plug-in de números de datas para calendários
+Name[pt_BR]=Plugin de números de datas para calendários
 Name[ru]=День в году
 Name[sk]=Modul dátumov pre kalendáre
 Name[sl]=Datumski vstavek za koledarje
@@ -95,7 +95,7 @@ Comment[nl]=Deze plug-in zorgt ervoor dat het dagnummer boven de agendaweergave 
 Comment[nn]=For kvar dag vil dette programtillegget visa nummeret til denne dagen i året øvst i tidsplanen. For eksempel vert 1. februar vist som dag 32.
 Comment[pl]=Ta wtyczka dla każdego dnia pokazuje jego numer kolejny w roku, na szczycie widoku planu. Na przykład, 1 luty to 32 dzień roku.
 Comment[pt]=Para cada dia, este 'plugin' mostra o seu número de dia do ano no topo da agenda. Por exemplo, o dia 1 de Fevereiro é o dia 32 do ano.
-Comment[pt_BR]=Para cada dia, esse plug-in mostra o número do dia no topo da visualização da agenda. Por exemplo, 1º de fevereiro é o dia 32 do ano.
+Comment[pt_BR]=Para cada dia, esse plugin mostra o número do dia no topo da visualização da agenda. Por exemplo, 1º de fevereiro é o dia 32 do ano.
 Comment[ru]=Этот модуль показывает номер дня в году для каждой даты. Например, для 1 февраля будет показан номер 32.
 Comment[sk]=Tento modul pre každý deň zobrazí jeho číslo dňa v roku navrchu pohľadu agendy. Napríklad 1. február je deň číslo 32 v roku.
 Comment[sl]=Za vsak dan ta vstavek prikazuje številko dneva v letu na vrhu praikaza agende. Npr., 1. februar je 32. dan v letu.
