--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -32,7 +32,7 @@ Name[nn]=Programtillegg for «Dagen i dag» frå Wikipedia
 Name[pa]=ਵਿਕਿਪੀਡਿਆ 'ਇਤਹਾਸ ਵਿੱਚ ਅੱਜ ਦਾ ਦਿਨ' ਪਲੱਗਇਨ
 Name[pl]=Wtyczka Wikipedii 'Wybrane rocznice'
 Name[pt]='Plugin' do Wikipédia para 'Aconteceu neste dia'
-Name[pt_BR]=Plug-in de 'Este Dia na História' da Wikipédia
+Name[pt_BR]=Plugin de 'Este Dia na História' da Wikipédia
 Name[ru]=Показ блока «В этот день» с Wikipedia
 Name[sl]=Vstavek za Wikipedijin »Na današnji dan«
 Name[sr]=Прикључак за Википедијино „догодило се на данашњи дан“
@@ -75,7 +75,7 @@ Comment[nn]=Dette programtillegget gjev lenkjer til «Dagen i dag» i Wikipedia
 Comment[pa]=ਇਹ ਪਲੱਗਇਨ ਵਿਕਿਪੀਡਿਆ 'ਇਤਹਾਸ ਵਿੱਚ ਅੱਜ ਦਾ ਦਿਨ' ਲਈ ਲਿੰਕ ਦਿੰਦੀ ਹੈ।
 Comment[pl]=Wtyczka dostarcza linki do stron 'Ten dzień w historii' Wikipedii
 Comment[pt]=Este 'plugin' oferece referências às páginas do Wikipédia sobre o que 'Aconteceu neste dia'
-Comment[pt_BR]=Este plug-in fornece links para as páginas do 'Este Dia na História' da Wikipédia
+Comment[pt_BR]=Este plugin fornece links para as páginas do 'Este Dia na História' da Wikipédia
 Comment[ru]=Показ блока «В этот день» с Wikipedia
 Comment[sl]=Ta vstavek ponuja povezave na Wikipedijino stran »Na današnji dan«
 Comment[sr]=Овај прикључак добавља везе ка Википедијиним страницама „догодило се на данашњи дан“
