SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -48,6 +48,7 @@ Name[pt]=Cores e Tipos de Letra
 Name[pt_BR]=Fontes e cores
 Name[ro]=Culori și fonturi
 Name[ru]=Цвета и шрифты
+Name[sk]=Farby a písma
 Name[sl]=Barve in pisave
 Name[sr]=Боје и фонтови
 Name[sr@ijekavian]=Боје и фонтови
