--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -162,6 +162,7 @@ X-KDE-Keywords[nl]=korganizer,plug-in,module
 X-KDE-Keywords[pl]=korganizer,wtyczka,moduł
 X-KDE-Keywords[pt]=korganizer,'plugin',módulo
 X-KDE-Keywords[pt_BR]=korganizer,plugin,módulo
+X-KDE-Keywords[sk]=korganizer,plugin,modul
 X-KDE-Keywords[sr]=korganizer,plugin,module,К‑организатор,прикључак,модул
 X-KDE-Keywords[sr@ijekavian]=korganizer,plugin,module,К‑организатор,прикључак,модул
 X-KDE-Keywords[sr@ijekavianlatin]=korganizer,plugin,module,K‑organizator,priključak,modul
