SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -145,6 +145,7 @@ X-KDE-Keywords=korganizer, configure, settings, custom fields
 X-KDE-Keywords[ca]=korganizer, configura, arranjament, camps personalitzats
 X-KDE-Keywords[da]=korganizer, indstil, indstillinger, brugertilpassede felter
 X-KDE-Keywords[de]=KOrganizer,einstellen,konfigurieren,Konfiguration,Einrichtung,Einstellungen,benutzerdefinierte Felder
+X-KDE-Keywords[el]=korganizer, διαμόρφωση, ρυθμίσεις, προσαρμοσμένα πεδία
 X-KDE-Keywords[es]=korganizer, configurar, preferencias, campos personalizados
 X-KDE-Keywords[et]=korganizer, seadistamine, seadistused, omaloodud väljad
 X-KDE-Keywords[fi]=korganizer, asetukset, omat kentät
