--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -5,6 +5,7 @@ Name[ca@valencia]=Dimoni de recordatoris
 Name[cs]=Démon upomínek
 Name[da]=Påmindelsedæmon
 Name[de]=Erinnerungsmodul
+Name[el]=Δαίμονας υπενθύμισης του KOrganizer
 Name[en_GB]=Reminder Dæmon
 Name[es]=Demonio de recordatorio
 Name[et]=Meeldetuletuste deemon
@@ -43,6 +44,7 @@ Comment[ca@valencia]=Dimoni de recordatoris de tasques i esdeveniments
 Comment[cs]=Démon upomínek na události a úkoly
 Comment[da]=Påmindelsedæmon til begivenheder og opgaver
 Comment[de]=Erinnerungsdienst für Ereignisse und Termine
+Comment[el]=Δαίμονας υπενθύμισης γεγονότων και εργασιών
 Comment[en_GB]=Event and task reminder dæmon
 Comment[es]=Demonio de recordatorio de eventos y tareas
 Comment[et]=Sündmuste ja ülesannete meeldetuletuste deemon
