--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -112,6 +112,7 @@ X-KDE-Keywords=korganizer,colors,fonts
 X-KDE-Keywords[ca]=korganizer,colors,tipus de lletra
 X-KDE-Keywords[da]=korganizer,farver,skrifttyper
 X-KDE-Keywords[de]=KOrganizer,Farben,Schriftarten
+X-KDE-Keywords[el]=korganizer,χρώματα,γραμματοσειρές
 X-KDE-Keywords[es]=korganizer,colores,tipos de letra
 X-KDE-Keywords[et]=korganizer,värvid,fondid
 X-KDE-Keywords[fi]=korganizer,värit,kirjasimet,fontit
