--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -142,6 +142,7 @@ X-KDE-Keywords=korganizer,freebusy,scheduling
 X-KDE-Keywords[ca]=korganizer,lliure/ocupat,planificació
 X-KDE-Keywords[da]=korganizer,freebusy,skemalægning
 X-KDE-Keywords[de]=KOrganizer,Frei/Beschäftigt,Frei/Belegt,Ablaufplanung
+X-KDE-Keywords[el]=korganizer,ελεύθερος-η απασχολημένος-η,προγραμματισμός
 X-KDE-Keywords[es]=korganizer,disponibilidad,agenda
 X-KDE-Keywords[et]=korganizer,vaba,hõivatud,ajakava
 X-KDE-Keywords[fi]=korganizer,varaustiedot,vapaa/varattu,aikataulut
