--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -139,6 +139,7 @@ X-KDE-Keywords=korganizer,group,scheduling
 X-KDE-Keywords[ca]=korganizer,grup,planificació
 X-KDE-Keywords[da]=korganizer,gruppe,skemalægning
 X-KDE-Keywords[de]=KOrganizer,Gruppe,Ablaufplanung
+X-KDE-Keywords[el]=korganizer,ομάδα,προγραμματισμός
 X-KDE-Keywords[es]=korganizer,grupo,agenda
 X-KDE-Keywords[et]=korganizer,grupid,grupitöö,ajakavad
 X-KDE-Keywords[fi]=korganizer,ryhmä,aikataulut
