--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -146,6 +146,7 @@ X-KDE-Keywords=korganizer,plugin,module
 X-KDE-Keywords[ca]=korganizer,connector,mòdul
 X-KDE-Keywords[da]=korganizer,plugin,modul
 X-KDE-Keywords[de]=KOrganizer,Modul,Modul
+X-KDE-Keywords[el]=korganizer,πρόσθετο,άρθρωμα
 X-KDE-Keywords[es]=korganizer,complemento,módulo
 X-KDE-Keywords[et]=korganizer,plugin,moodul
 X-KDE-Keywords[fi]=korganizer,liitännäinen,moduuli
