--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -149,6 +149,7 @@ X-KDE-Keywords[ca]=korganizer,vista
 X-KDE-Keywords[cs]=korganizer,pohled
 X-KDE-Keywords[da]=korganizer,vis
 X-KDE-Keywords[de]=KOrganizer,Ansicht
+X-KDE-Keywords[el]=korganizer,προβολή
 X-KDE-Keywords[es]=korganizer,vista
 X-KDE-Keywords[et]=korganizer,vaade
 X-KDE-Keywords[fi]=korganizer,näkymä
