SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -51,6 +51,7 @@ Name[pt]=Hora e Data
 Name[pt_BR]=Data e hora
 Name[ro]=Oră și dată
 Name[ru]=Дата и время
+Name[sk]=Čas a dátum
 Name[sl]=Čas in datum
 Name[sr]=Време и датум
 Name[sr@ijekavian]=Вријеме и датум
@@ -134,6 +135,7 @@ X-KDE-Keywords[nl]=korganizer,tijd
 X-KDE-Keywords[pl]=korganizer,czas
 X-KDE-Keywords[pt]=korganizer,hora
 X-KDE-Keywords[pt_BR]=korganizer,tempo
+X-KDE-Keywords[sk]=korganizer,čas
 X-KDE-Keywords[sr]=korganizer,time,К‑организатор,време
 X-KDE-Keywords[sr@ijekavian]=korganizer,time,К‑организатор,време
 X-KDE-Keywords[sr@ijekavianlatin]=korganizer,time,K‑organizator,vreme
