--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -167,6 +167,7 @@ X-KDE-Keywords[nl]=korganizer,beeld
 X-KDE-Keywords[pl]=korganizer,widok
 X-KDE-Keywords[pt]=korganizer,ver
 X-KDE-Keywords[pt_BR]=korganizer,vsualizar
+X-KDE-Keywords[sk]=korganizer,zobraziť
 X-KDE-Keywords[sr]=korganizer,view,К‑организатор,приказ
 X-KDE-Keywords[sr@ijekavian]=korganizer,view,К‑организатор,приказ
 X-KDE-Keywords[sr@ijekavianlatin]=korganizer,view,K‑organizator,prikaz
