--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -129,6 +129,7 @@ X-KDE-Keywords[nl]=korganizer,kleuren,lettertypen
 X-KDE-Keywords[pl]=korganizer,kolory,czcionki
 X-KDE-Keywords[pt]=korganizer,cores,tipos de letra
 X-KDE-Keywords[pt_BR]=korganizer,cores,fontes
+X-KDE-Keywords[sk]=korganizer,farby,písma
 X-KDE-Keywords[sr]=korganizer,colors,fonts,К‑организатор,боје,фонтови
 X-KDE-Keywords[sr@ijekavian]=korganizer,colors,fonts,К‑организатор,боје,фонтови
 X-KDE-Keywords[sr@ijekavianlatin]=korganizer,colors,fonts,K‑organizator,boje,fontovi
