--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -158,6 +158,7 @@ X-KDE-Keywords[nl]=korganizer,vrijbezet,plannen
 X-KDE-Keywords[pl]=korganizer,wolnyzajęty,planowanie
 X-KDE-Keywords[pt]=korganizer,livre-ocupado,agendamento
 X-KDE-Keywords[pt_BR]=korganizer,livre-ocupado,agendamento
+X-KDE-Keywords[sk]=korganizer,freebusy,plánovanie
 X-KDE-Keywords[sr]=korganizer,freebusy,scheduling,К‑организатор,слободно-заузето,распоређивање
 X-KDE-Keywords[sr@ijekavian]=korganizer,freebusy,scheduling,К‑организатор,слободно-заузето,распоређивање
 X-KDE-Keywords[sr@ijekavianlatin]=korganizer,freebusy,scheduling,K‑organizator,slobodno-zauzeto,raspoređivanje
