--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -170,6 +170,7 @@ X-KDE-Keywords[nl]=korganizer,hoofdpagina
 X-KDE-Keywords[pl]=korganizer,główny
 X-KDE-Keywords[pt]=korganizer,principal
 X-KDE-Keywords[pt_BR]=korganizer,principal
+X-KDE-Keywords[sk]=korganizer,hlavné
 X-KDE-Keywords[sr]=korganizer,main,К‑организатор,главно
 X-KDE-Keywords[sr@ijekavian]=korganizer,main,К‑организатор,главно
 X-KDE-Keywords[sr@ijekavianlatin]=korganizer,main,K‑organizator,glavno
