--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -2,5 +2,6 @@ add_subdirectory(datenums)
 add_subdirectory(hebrew)
 add_subdirectory(printing)
 add_subdirectory(picoftheday)
-add_subdirectory(thisdayinhistory)
+# Laurent, wikimedia changed api so this plugins can't work
+#add_subdirectory(thisdayinhistory)
 
