--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -171,6 +171,7 @@ X-KDE-Keywords[pl]=korganizer,główny
 X-KDE-Keywords[pt]=korganizer,principal
 X-KDE-Keywords[pt_BR]=korganizer,principal
 X-KDE-Keywords[sk]=korganizer,hlavné
+X-KDE-Keywords[sl]=korganizer,glavno
 X-KDE-Keywords[sr]=korganizer,main,К‑организатор,главно
 X-KDE-Keywords[sr@ijekavian]=korganizer,main,К‑организатор,главно
 X-KDE-Keywords[sr@ijekavianlatin]=korganizer,main,K‑organizator,glavno
