--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -99,7 +99,7 @@ Comment[es]=Configuración de los complementos de KOrganizer
 Comment[et]=KOrganizeri pluginate seadistused
 Comment[eu]=KOrganizer-en plugin konfigurazioa
 Comment[fa]=پیکربندی وصله KOrganizer
-Comment[fi]=KOrganizerin liitännäisen asetukset
+Comment[fi]=KOrganizerin liitännäisten asetukset
 Comment[fr]=Configuration du module KOrganizer
 Comment[fy]=KOrganizer pluginynstellings
 Comment[ga]=Cumraíocht Breiseán KOrganizer
