--- a/plugins/datenums/CMakeLists.txt
+++ b/plugins/datenums/CMakeLists.txt
@@ -21,12 +21,12 @@ target_link_libraries(korg_datenums
 )
 install(TARGETS
   korg_datenums
-  DESTINATION ${PLUGIN_INSTALL_DIR}
+  DESTINATION ${KDE_INSTALL_PLUGINDIR}
 )
 
 ########### install files ###############
 
 install(FILES
   datenums.desktop
-  DESTINATION ${SERVICES_INSTALL_DIR}/korganizer
+  DESTINATION ${KDE_INSTALL_KSERVICES5DIR}/korganizer
 )
