--- a/plugins/picoftheday/CMakeLists.txt
+++ b/plugins/picoftheday/CMakeLists.txt
@@ -22,13 +22,13 @@ target_link_libraries(korg_picoftheday
 
 install(TARGETS
   korg_picoftheday
-  DESTINATION ${PLUGIN_INSTALL_DIR}
+  DESTINATION ${KDE_INSTALL_PLUGINDIR}
 )
 
 ########### install files ###############
 
 install(FILES
   picoftheday.desktop
-  DESTINATION ${SERVICES_INSTALL_DIR}/korganizer
+  DESTINATION ${KDE_INSTALL_KSERVICES5DIR}/korganizer
 )
 
