--- a/sounds/CMakeLists.txt
+++ b/sounds/CMakeLists.txt
@@ -1,5 +1,5 @@
 install(FILES
   alert.wav icemag.wav lightmag.wav onscreen.wav spinout.wav
-  DESTINATION ${DATA_INSTALL_DIR}/korganizer/sounds
+  DESTINATION ${KDE_INSTALL_DATADIR}/korganizer/sounds
 )
 
