--- a/korganizer_part.rc
+++ b/korganizer_part.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="korganizer" version="422">
+<kpartgui name="korganizer" version="423">
 
   <MenuBar>
     <Menu name="file"><text>&amp;File</text>
@@ -195,6 +195,8 @@
     <Action name="akonadi_resource_create"/>
     <Action name="akonadi_resource_delete"/>
     <Action name="akonadi_collection_sync"/>
+    <Action name="akonadi_resource_synchronize"/>
+    <Action name="akonadi_collection_sync_recursive"/>
     <Separator/>
     <Action name="akonadi_collection_properties"/>
     <Action name="akonadi_resource_properties"/>
