PERSISTANTSEARCH includes identities without emails.
Make sure that identities without valid emailaddresses are stripped out
of the search string.

KOLAB: #4664
(cherry picked from commit 494d0df1cc1f3dff3d93bdef37182cc93d897339)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,6 +203,7 @@ set(korganizerprivate_LIB_SRCS
     previewdialog.cpp
     publishdialog.cpp
     searchdialog.cpp
+    searchcollectionhelper.cpp
     statusdialog.cpp
     views/agendaview/koagendaview.cpp
     views/journalview/kojournalview.cpp
