Remove kdepim-specific variable KDEPIM_BUILD_STATIC
If a static build is required use the generic BUILD_SHARED_LIBS from
extra-cmake-modules.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,7 +142,7 @@ set(korganizer_core_LIB_SRCS
 
 kconfig_add_kcfg_files(korganizer_core_LIB_SRCS koprefs_base.kcfgc)
 
-add_library(korganizer_core ${LIBRARY_TYPE} ${korganizer_core_LIB_SRCS})
+add_library(korganizer_core ${korganizer_core_LIB_SRCS})
 generate_export_header(korganizer_core BASE_NAME korganizer_core)
 
 target_link_libraries(korganizer_core
@@ -246,7 +246,7 @@ set(korganizerprivate_LIB_SRCS
     ${CMAKE_SOURCE_DIR}/korganizer/org.kde.korganizer.Korganizer.xml
   )
 
-  add_library(korganizerprivate ${LIBRARY_TYPE} ${korganizerprivate_LIB_SRCS})
+  add_library(korganizerprivate ${korganizerprivate_LIB_SRCS})
   generate_export_header(korganizerprivate BASE_NAME korganizerprivate)
 
   target_link_libraries(korganizerprivate
