--- a/interfaces/korganizer/CMakeLists.txt
+++ b/interfaces/korganizer/CMakeLists.txt
@@ -6,7 +6,7 @@ set(korganizer_interfaces_LIB_SRCS
   mainwindow.cpp
 )
 
-add_library(korganizer_interfaces ${LIBRARY_TYPE} ${korganizer_interfaces_LIB_SRCS})
+add_library(korganizer_interfaces ${korganizer_interfaces_LIB_SRCS})
 generate_export_header(korganizer_interfaces BASE_NAME korganizer_interfaces)
 target_link_libraries(korganizer_interfaces
   akonadi_next
