--- a/data/korganizer_part.rc
+++ b/data/korganizer_part.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="korganizer" version="423">
+<kpartgui name="korganizer" version="424">
 
   <MenuBar>
     <Menu name="file"><text>&amp;File</text>
@@ -188,9 +188,8 @@
     <Separator/>
     <Action name="set_standard_calendar"/>
     <Separator/>
-    <Action name="akonadi_collection_cut"/>
-    <Action name="akonadi_collection_copy"/>
-    <Action name="akonadi_paste"/>
+    <Action name="akonadi_collection_move_to_menu"/>
+    <Action name="akonadi_collection_copy_to_menu"/>
     <Separator/>
     <Action name="akonadi_resource_create"/>
     <Action name="akonadi_resource_delete"/>
