--- a/pixmaps/CMakeLists.txt
+++ b/pixmaps/CMakeLists.txt
@@ -1,5 +1,7 @@
 ecm_install_icons(ICONS 
-hi128-apps-korganizer.png    hi16-apps-korganizer.png    hi22-apps-korganizer.png    hi32-apps-korganizer.png    hi48-apps-korganizer.png    hi64-apps-korganizer.png    ox16-actions-smallclock.png
-hi128-apps-korg-journal.png  hi16-apps-korg-journal.png  hi22-apps-korg-journal.png  hi32-apps-korg-journal.png  hi48-apps-korg-journal.png  hi64-apps-korg-journal.png  ox16-actions-upindicator.png
-hi128-apps-korg-todo.png     hi16-apps-korg-todo.png     hi22-apps-korg-todo.png     hi32-apps-korg-todo.png     hi48-apps-korg-todo.png     hi64-apps-korg-todo.png     ox22-actions-checkmark.png
-DESTINATION ${KDE_INSTALL_ICONDIR})
+128-apps-korganizer.png    16-apps-korganizer.png    22-apps-korganizer.png    32-apps-korganizer.png    48-apps-korganizer.png    64-apps-korganizer.png    
+128-apps-korg-journal.png  16-apps-korg-journal.png  22-apps-korg-journal.png  32-apps-korg-journal.png  48-apps-korg-journal.png  64-apps-korg-journal.png  
+128-apps-korg-todo.png     16-apps-korg-todo.png     22-apps-korg-todo.png     32-apps-korg-todo.png     48-apps-korg-todo.png     64-apps-korg-todo.png     
+DESTINATION ${KDE_INSTALL_ICONDIR} THEME hicolor)
+ecm_install_icons(ICONS 16-actions-smallclock.png 16-actions-upindicator.png 22-actions-checkmark.png DESTINATION ${KDE_INSTALL_ICONDIR} THEME oxygen) 
+
