--- a/org.kde.korganizer.desktop
+++ b/org.kde.korganizer.desktop
@@ -212,7 +212,7 @@ GenericName[x-test]=xxPersonal Organizerxx
 GenericName[zh_CN]=个人日程安排
 GenericName[zh_TW]=個人行程組織軟體
 X-KDE-ServiceTypes=DBUS/Organizer
-X-KDE-StartupNotify=true
+StartupNotify=true
 X-DBUS-StartupType=Unique
 X-DBUS-ServiceName=org.kde.korganizer
 Categories=Qt;KDE;Office;Calendar;
