--- a/kontactplugin/korganizer/CMakeLists.txt
+++ b/kontactplugin/korganizer/CMakeLists.txt
@@ -12,7 +12,7 @@ qt5_add_dbus_interfaces(kontact_korganizerplugin_PART_SRCS ${CMAKE_SOURCE_DIR}/k
 
 add_library(kontact_korganizerplugin MODULE ${kontact_korganizerplugin_PART_SRCS})
 
-target_link_libraries(kontact_korganizerplugin KF5::AkonadiCalendar KF5::CalendarUtils  KF5::Contacts KF5::CalendarCore kdepim KF5::KontactInterface korganizerprivate calendarsupport KF5::AkonadiCalendar)
+target_link_libraries(kontact_korganizerplugin KF5::AkonadiCalendar KF5::CalendarUtils KF5::Contacts KF5::CalendarCore kdepim KF5::KontactInterface korganizerprivate calendarsupport KF5::AkonadiCalendar)
 
 ########### next target ###############
 
@@ -32,7 +32,7 @@ qt5_add_dbus_interfaces(kontact_journalplugin_PART_SRCS ${CMAKE_SOURCE_DIR}/korg
 
 add_library(kontact_journalplugin MODULE ${kontact_journalplugin_PART_SRCS})
 
-target_link_libraries(kontact_journalplugin  KF5::KontactInterface)
+target_link_libraries(kontact_journalplugin  KF5::KontactInterface KF5::IconThemes KF5::WindowSystem)
 
 ########### next target ###############
 
