--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ project(korganizer)
 
 add_definitions( -DQT_NO_CAST_FROM_ASCII )
 add_definitions( -DQT_NO_CAST_TO_ASCII )
-
+add_definitions(-DTRANSLATION_DOMAIN=\"korganizer\")
 
 # enable exception handling
 
