Add support for "Serverside Subscription..."

--- a/data/korganizer_part.rc
+++ b/data/korganizer_part.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="korganizer" version="425" translationDomain="korganizer">
+<kpartgui name="korganizer" version="427" translationDomain="korganizer">
   <MenuBar>
     <Menu name="file"><text>&amp;File</text>
       <Merge/>
@@ -198,6 +198,8 @@
     <Separator/>
     <Action name="akonadi_collection_properties"/>
     <Action name="akonadi_resource_properties"/>
+    <Separator/>
+    <Action name="serverside_subscription"/>
   </Menu>
 
 </kpartgui>
